# DeepCNN

./: .gitignore  CMakeLists.txt  README.md
scripts/: confusionMatrix.m  formatCifar.m  plotCost.m  writeMat.m
sims/: cifar.cpp  testCifar.cpp  testCifar_io.cpp  trainCifar.cpp
src/: BaseConnection.hpp  BaseData.cpp  BaseData.hpp  BaseLayer.cpp  Column.cpp  Column.hpp  cuda_utils.cu  cuda_utils.hpp  includes.hpp  kernels.hpp  matio_utils.hpp  utils.hpp
src/connections/: BaseConnection.cpp  BaseConnection.hpp  Convolution.cpp  Convolution.cu  Convolution.hpp  FullyConnected.cpp  FullyConnected.hpp  MaxPool.cpp  MaxPool.hpp  SoftmaxCost.cu
src/layers/: Activation.cpp  Activation.hpp  BaseCostFunction.cpp  BaseCostFunction.hpp  BaseLayer.cpp  BaseLayer.hpp  Image.cpp  Image.hpp  LeastSquaresCost.cpp  LeastSquaresCost.cu  LeastSquaresCost.hpp  MatInput.cpp  MatInput.hpp  SoftmaxCost.cpp  SoftmaxCost.cu  SoftmaxCost.hpp
tests/: cifarGradientTest.cpp  cifarTest.cpp  convTest.cpp  fcTest.cpp  imageTest.cpp  ioTest.cpp  nandTest.cpp  structureTest.cpp  testAll.cpp  testMain.cpp  test_utils.cpp  test_utils.hpp  xorTest.cpp
tests/testImgs/: fileList.txt  idxcount_5x4x3.txt  square_16x8x1.txt
tests/testMats/: 1x1x2x1_randweights.mat  1x1x2x2_randweights.mat  binaryInput.mat  binaryInput_half.mat  binaryInput_zeros.mat  idxcount_2x4x1x5.mat  idxcount_8x16x1x5.mat  nandGT.mat  notX1GT.mat  xorGT.mat  xorGT_zeros.mat  xorInput.mat
tests/testWeights/: idxcount_5x1x4x2.mat
